<resources>
    <string name="app_name">Swapy Design</string>
    <string name="company">Company</string>
    <string name="account">Account</string>
    <string name="current_shift">Current shift</string>
    <string name="preferred_shift">Preferred shift</string>
    <string name="text_display_contact_info">Contact information will be displayed after the swap request has been accepted</string>
    <string name="btn_send_request">Send a Swap Request</string>
    <string name="request_sent">You have sent a swap request</string>
    <string name="request_accepted">Your swap request has been accepted</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone number</string>
    <string name="name">Name</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="your_preferred_shift">Your preferred shift:</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="nav_drawer_open">Open Navigation Bar</string>
    <string name="nav_drawer_close">close Navigation Bar</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="received_swap_requests">Received swap requests</string>
    <string name="sent_swap_requests">Sent swap requests</string>
    <string name="settings">Settings</string>
    <string name="accepted_swap_requests">Accepted swap requests</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swap">Swap</string>
    <string name="filter">Filter</string>
</resources>
