<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:src="@drawable/dgdf"
        android:contentDescription="Logo" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        android:background="@drawable/edittext_style"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        android:background="@drawable/edittext_style"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="18sp" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="154dp"
            android:layout_height="47dp"
            android:background="@drawable/btn_style"
            android:text="@string/btn_sign_in"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/dont_have_account"
            android:textColor="@color/commonBlackTextColor" />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_up"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>