<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImageSignUp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/male_circle_512" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edittext_style"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edittext_style"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edittext_style"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edittext_style"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edittext_style"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinnerCompany"
            android:layout_width="265dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp" />

        <Spinner
            android:id="@+id/spinnerCompanyBranch"
            android:layout_width="265dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp" />


        <Spinner
            android:id="@+id/spinnerAccount"
            android:layout_width="265dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp" />

        <Spinner
            android:id="@+id/spinnerCurrentShift"
            android:layout_width="265dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="154dp"
                android:layout_height="47dp"
                android:background="@drawable/btn_style"
                android:text="@string/btn_sign_up"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/already_have_account"
                android:textColor="@color/commonBlackTextColor" />

            <TextView
                android:id="@+id/signInText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_in"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>