<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginStart="5dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/imgCloseFilterDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:elevation="5dp"
        android:src="@drawable/ic_close_black_24dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/your_preferred_shift"
                android:textSize="21sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/preferredTimeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                </Spinner>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingEnd="0dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="0dp"
                        android:paddingStart="10dp">

                        <RelativeLayout
                            android:id="@+id/preferredTimeAM"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:background="@drawable/selection_background"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/am"
                                android:textColor="#ffffff"
                                android:textSize="14sp" />

                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingEnd="10dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="10dp"
                        android:paddingStart="0dp">

                        <RelativeLayout
                            android:id="@+id/preferredTimePM"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:background="@drawable/selection_background_light"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pm"
                                android:textColor="@color/colorPrimary"
                                android:textSize="14sp" />

                        </RelativeLayout>
                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/buttonApplyFilter"
                android:layout_width="120dp"
                android:layout_height="47dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_style"
                android:text="@string/apply_filter"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>